@@ -128,8 +128,8 @@ namespace preferences {
 	bool save_replays();
 	void set_save_replays(bool value);
 
-	bool delete_autosaves();
-	void set_delete_autosaves(bool value);
+	bool delete_saves();
+	void set_delete_saves(bool value);
 
 	void set_ask_delete_saves(bool value);
 	bool ask_delete_saves();
